<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>cn.sunjinxin.savior</groupId>
        <artifactId>saviors</artifactId>
        <version>1.0.4</version>
    </parent>

    <artifactId>savior-event</artifactId>
    <version>${savior-event.version}</version>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>cn.sunjinxin.savior</groupId>
            <artifactId>savior-core</artifactId>
            <version>${savior-core.version}</version>
        </dependency>
    </dependencies>

</project>